style: Lighten purple header

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -52,10 +52,10 @@
 
 body { background: #e4ead1;background: #eeeeee;}
 header {
-    background: #4f2e67;
+    background: #6d408e;
 }
 header h1 {
-    text-shadow: 0px 2px 0px #330646;
+    text-shadow: 0px 2px 0px #542269;
 }
 // a { color:#1A7F33;}
 // a { color:rgb(10, 192, 55);}
