--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,54 +2,7 @@
 ---
 
 @import "{{ site.theme }}";
-// .wrapper {
-//     position: static;
-//     width: auto;
-// }
-// nav {
-//     //width: 300px;*/
-//     position: static;
-//     top: auto;
-//     left: auto;
-//     text-align: right;
-//     float: left;
-//     margin-left: auto;
-//     margin-right: 20px;
-//     margin-top: 200px;
-// }
-// section {
-//     width: 590px;
-//     position: static;
-//     float: left;
-// }
-// h1 {
-//     margin-bottom: 24px;
-// }
-// h2 {
-//     font-size:20px;
-// }
-// footer {
-//     position: static;
-// }
-
-// This looks good but is fixed...
-// nav {
-//     position: static;
-//     float: left;
-//     top: auto;
-//     margin-left:-240px;
-//     width: 220px;
-//     margin-right: 20px;
-//     margin-top: 10px;
-// }
-// nav>ul {
-//     padding: 0 0 0 20px;
-// }
-// section {
-//     position: relative;
-// }
-// End fixed
-
+// color scheme change
 body { background: #e4ead1;background: #eeeeee;}
 header {
     background: #6d408e;
@@ -57,9 +10,8 @@ header {
 header h1 {
     text-shadow: 0px 2px 0px #542269;
 }
-// a { color:#1A7F33;}
-// a { color:rgb(10, 192, 55);}
 a { color: #741eb3;  }
+
 a:hover { color:#999999; text-decoration: underline; }
 section a { border-bottom: 1px dotted; }
 section a > img { vertical-align: top; }
@@ -73,9 +25,23 @@ nav {
     padding-right: 20px;
     margin-left: -574px;
     top: 190px;
-    max-height: 70vh;
+    max-height: calc(100% - 190px);
     text-align: inherit;
-    overflow-x: hidden;
+}
+// scrollbar
+::-webkit-scrollbar {
+    width: 11px;
+}
+::-webkit-scrollbar-track {
+    background: #e9e9e8;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #ddd; 
 }
 // End
 nav ul {
@@ -83,14 +49,9 @@ nav ul {
     padding-left: 52px;
 }
 nav ul li {
-    // overflow: hidden;
-    // text-overflow: ellipsis;
     padding-left: 2.6em;
     text-indent: -2.6em;
 }
-// nav ul a {
-//     white-space: nowrap;
-// }
 nav ul li.tag-h2 a {
     margin-left: 10px;
 }
@@ -112,12 +73,24 @@ section>p {
 }
 hr { margin: 20px 0; }
 
+section>ol, section>ul { 
+    // margin: 0 40px 0 30px;
+    margin: 0;
+}
+section ul ul, ul ol, ol ul, ol ol {
+    margin-bottom: 4px;
+    padding: 0 0 0 20px
+}
+
 h1, h2, h3, h2+p>strong {
     line-height: 1.0;
 }
 h1 {
     font-size: 1.8em;
-    margin-bottom: 20px;
+    margin: 20px 0;
+}
+h1:first-of-type {
+    margin-top: 0;
 }
 h2 {
     font-size:1.5em;
@@ -126,7 +99,7 @@ h3, h2+p>strong {
     font-size:1.2em;
     color: #666;
 }
-pre{ line-height: 1em; }
+pre{ line-height: 1em; margin: 0 10px; }
 code {
     // font-family: Courier New, Courier, monospace; 
     font-family: Consolas, monospace;
@@ -147,4 +120,42 @@ p>code, li>code, blockquote code, h1>code, h2>code, h3>code, h4>code, strong>cod
 blockquote { font-style: normal;}
 footer {
     position: static;
+}
+
+@media print, screen and (max-width: 480px) {
+    section {
+        padding: 30px 0 50px;
+    }
+    section hr {
+        margin: 20px;
+    }
+    section > p {
+        margin: 8px 20px;
+    }
+    section h1 {
+        margin: 0 10px 20px;
+    }
+    section h2 {
+        margin: 20px 10px 10px;
+    }
+    section h3, h2+p>strong {
+        font-size:1.2em;
+        margin: 20px 20px 6px
+    }
+    section h4 { 
+        margin: 20px 20px 8px;
+    }
+    section>ol, section>ul { 
+        margin: 0 20px 0 0;
+    }
+    section table {
+        margin: 0 20px;
+        width: calc(100% - 40px);
+    }
+    pre {
+        margin: 0 20px;
+    }
+    blockquote {
+        margin-left: 20px;
+    }
 }
