--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,7 +75,7 @@ hr { margin: 20px 0; }
 
 section>ol, section>ul { 
     // margin: 0 40px 0 30px;
-    margin: 0;
+    margin: 0 0 20px 0;
 }
 section ul ul, ul ol, ol ul, ol ol {
     margin-bottom: 4px;
