--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,6 +99,9 @@ h3, h2+p>strong {
     font-size:1.2em;
     color: #666;
 }
+h4 {
+    margin: 10px 0;
+}
 pre{ line-height: 1em; margin: 0 10px; }
 code {
     // font-family: Courier New, Courier, monospace; 
